# dashsync

./: commitlint.config.ts  lint-staged.config.mjs  package.json  pnpm-lock.yaml
apps/api/: .gitignore  pyproject.toml
apps/api/src/api/: main.py
apps/web/: .env.example
apps/web/app/: page.tsx
apps/web/app/info/: page.tsx
