[project]
name = "api"
version = "0.1.0"
description = ""
authors = [{ name = "phnglh", email = "phonghngle@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
]

[tool.poetry]
packages = [{ include = "api", from = "src" }]


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.4"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88
extend-select = ["I", "F", "E", "W"]
exclude = ["migrations"]
